<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.ProfileNeighbourActivity"
    android:id="@+id/profileLayout">

    <android.support.v7.widget.CardView
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profile_header_avatar"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:contentDescription="Neighbour's avatar"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profile_header_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:tint="@android:color/white"
                android:padding="@dimen/fab_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/profile_header_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Neighbour Name"
                android:paddingStart="@dimen/fab_margin"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingBottom="@dimen/fab_margin"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_header_avatar"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/profile_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_header"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <TextView
                android:id="@+id/profile_body_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/profile_body_adresse_icon"
                android:hint="Neighbour Name"/>

            <ImageView
                android:id="@+id/profile_body_adresse_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_body_name"
                app:layout_constraintBottom_toTopOf="@+id/profile_body_phone_icon"
                app:layout_constraintEnd_toStartOf="@+id/profile_body_adresse"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <ImageView
                android:id="@+id/profile_body_phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_body_adresse_icon"
                app:layout_constraintBottom_toTopOf="@+id/profile_body_sociale_icon"
                app:layout_constraintEnd_toStartOf="@+id/profile_body_phone"
                app:srcCompat="@drawable/ic_baseline_phone_24" />

            <ImageView
                android:id="@+id/profile_body_sociale_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_body_phone_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_body_sociale_content"
                app:srcCompat="@drawable/ic_round_language_24" />

            <TextView
                android:id="@+id/profile_body_adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/profile_body_adresse_icon"
                app:layout_constraintTop_toTopOf="@+id/profile_body_adresse_icon"
                app:layout_constraintBottom_toBottomOf="@+id/profile_body_adresse_icon"
                android:hint="Neighbour's adresse"/>

            <TextView
                android:id="@+id/profile_body_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/profile_body_phone_icon"
                app:layout_constraintTop_toTopOf="@+id/profile_body_phone_icon"
                app:layout_constraintBottom_toBottomOf="@+id/profile_body_phone_icon"
                android:hint="Neighbour's phone number"/>

            <TextView
                android:id="@+id/profile_body_sociale_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/profile_body_sociale_icon"
                app:layout_constraintTop_toTopOf="@+id/profile_body_sociale_icon"
                app:layout_constraintBottom_toBottomOf="@+id/profile_body_sociale_icon"
                android:text="@string/social" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/profile_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_body"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <TextView
                android:id="@+id/profile_bio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/profile_bio_corpus"
                android:text="@string/about_me"/>

            <TextView
                android:id="@+id/profile_bio_corpus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_bio_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="Neighbour's own description" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profile_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        app:borderWidth="0dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="@+id/profile_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_header" />

</android.support.constraint.ConstraintLayout>